--- a/class09/HalloweenCandyminiproj.qmd
+++ b/class09/HalloweenCandyminiproj.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 9: Halloween Candy mini-Project"
 author: "Hailey Heirigs (PID: A16962278)"
-format: pdf
+format: gfm
 toc: true 
 ---
 
